test/vm/fails/invalid_cread.js
cread(bech32("MMX"), "field");